# fastapi-shortener-project

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  pyproject.toml  stuff.py
.github/workflows/: hello-action.yaml  hello-actions.yaml  hello_actions.yaml  python-check.yaml  python-checks.yaml
movie/: .coveragerc  app_lifespan.py  config.default.yaml  main.py  stuff.py
movie/api/: __init__.py  main_views.py  redirect_views.py
movie/api/api_v1/: __init__.py
movie/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py
movie/api/api_v1/movies/: __init__.py  crud.py  dependecies.py
movie/api/api_v1/movies/views/: __init__.py  detail_views.py  list_views.py
movie/commands/: __init__.py  cli.py  hello.py  token.py
movie/core/: __init__.py  config.py
movie/dependencies/: __init__.py  auth.py  films.py  movies.py
movie/pages/: home.html
movie/rest/: __init__.py  main_views.py
movie/rest/movies/: __init__.py  create_views.py  delete_view.py  list_views.py  update_views.py
movie/schemas/: muvies.py  short_url.py
movie/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py
movie/services/movies/: __init__.py  form_respons_helper.py
movie/storage/movies/: __init__.py  crud.py  exeptions.py
movie/templates/: about.html  base.html  home.html
movie/templates/components/: navbar.html
movie/templates/macro/: form_fields.html
movie/templates/movies/: create.html  list.html  update.html
movie/templates/movies/components/: back-to-list.html
movie/templates/movies/macro/: form.html
movie/templating/: __init__.py  jinja_templating.py
movie/testing/: conftest.py
movie/testing/test_api/: conftest.py  test_main_views.py
movie/testing/test_schemas/: test_muvies.py  test_user.py
url-shortener/: app_lifespan.py  main.py  manage.py
url-shortener/api/: __init__.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py
url-shortener/api/api_v1/movies/: crud.py  dependecies.py
url-shortener/api/api_v1/short_urls/: crud.py  dependecies.py  views.py
url-shortener/commands/: __init__.py  cli.py  hello.py  lists.py  token.py  tokens.py
url-shortener/core/: config.py
url-shortener/json_file/: conf.py
url-shortener/schemas/: muvies.py  short_url.py
(+18 files in other folders)
