[project]
name = "fastapi-movie"
version = "0.1.0"
description = "FastAPI Movie"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard,standart]>=0.115.12",
    "redis[hiredis]>=6.2.0",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
]

[tool.mypy]
strict = true
