[project]
name = "fastapi-movie"
version = "0.1.0"
description = "FastAPI Movie"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings[yaml]>=2.11.0",
    "redis[hiredis]>=6.2.0",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

# uv settiongs
[tool.uv]
required-version = "~=0.8.4"
preview = true


#pytest settings
[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra --strict-markers"
console_output_style = "progress"
markers = [
    "apitest: mark test as API test",
]
xfail_strict = true
#console_output_style = "count"
log_cli = false
log_cli_level = "INFO"

# settings mypy
[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy",
]

# ruff settings
[tool.ruff]
required-version = ">=0.11.13"

#для корня нашего проекта
src = [
    "movie",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    "FAST",
    "ANN", # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F", # PyFlakes (F)
    "COM",
    "Q",
]
ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
